# render-toy

./: .gitignore  .gitmodules  CMakeLists.txt  doxy_config
shaders/: compile_shader.sh  def.frag  def.vert
src/: main.cc  rt_app.cc  rt_app.hh  vk_loader.cc  vk_loader.hh
src/platform/: window.cc  window.hh  window_manager.cc  window_manager.hh
src/utils/: create_shader_module.cc  create_shader_module.hh  read_file.cc  read_file.hh
